# src/swagger-output.json
@@ -2,8 +2,8 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
-    "description": "Some description..."
+    "title": "API Scheduling of appointments",
+    "description": "API to manage client and professional registration, appointment scheduling, availability management and appointment history."
   },
   "host": "localhost:3000",
   "servers": [
@@ -16,7 +16,7 @@
     "http"
   ],
   "paths": {
-    "/historico/": {
+    "/history/": {
       "post": {
         "description": "",
         "responses": {
@@ -34,7 +34,7 @@
         }
       }
     },
-    "/historico/{id}": {
+    "/history/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -153,7 +153,7 @@
         }
       }
     },
-    "/profissional/": {
+    "/professional/": {
       "post": {
         "description": "",
         "responses": {
@@ -171,7 +171,7 @@
         }
       }
     },
-    "/profissional/{id}": {
+    "/professional/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -221,7 +221,7 @@
         }
       }
     },
-    "/procedimento/": {
+    "/procedure/": {
       "post": {
         "description": "",
         "responses": {
@@ -239,7 +239,7 @@
         }
       }
     },
-    "/procedimento/{id}": {
+    "/procedure/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -289,7 +289,7 @@
         }
       }
     },
-    "/disponibilidade/": {
+    "/availability/": {
       "post": {
         "description": "",
         "responses": {
@@ -307,7 +307,7 @@
         }
       }
     },
-    "/disponibilidade/{id}": {
+    "/availability/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -357,7 +357,7 @@
         }
       }
     },
-    "/consulta/": {
+    "/appointment/": {
       "post": {
         "description": "",
         "responses": {
@@ -375,7 +375,7 @@
         }
       }
     },
-    "/consulta/{id}": {
+    "/appointment/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -461,7 +461,7 @@
         }
       }
     },
-    "/logConsulta/": {
+    "/logAppointment/": {
       "post": {
         "description": "",
         "responses": {
@@ -471,7 +471,7 @@
         }
       }
     },
-    "/profissionalProcedimento/": {
+    "/professionalProcedure/": {
       "post": {
         "description": "",
         "responses": {
